Large refactor to squash bug of scan not inputting without user involvement

--- a/static/style.css
+++ b/static/style.css
@@ -59,7 +59,6 @@ body {
 	transform: translateY(-2px)
 }
 
-.hidden-ui {
-    position: absolute;
-	left: -10000px;
+#status-message {
+    white-space: pre-wrap;
 }
